# wgen

./: pyproject.toml
wgen/: __init__.py  telesst.py  weather.py
