[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wgen"
version = "0.1.0"
description = "Yet another statistical weather generator"
authors = [
           { name = "Mutahar Chalmers", email = "mutahar.chalmers@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [ "numpy>=1.20.3", "scipy>=1.10", "pandas>=2.0", "xarray>=2023.01.0",
                 "pyarrow>=14.0", "zarr>=2.18", "tqdm>=4.66", "kdetools>=0.2.0", "scskde>=0.1.1",
]

[project.urls]
"Homepage" = "https://github.com/MutaharChalmers/wgen"
